--- a/raytracing1_myVector3D.html
+++ b/raytracing1_myVector3D.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Raytracer with Three.js Vector3</title>
+	<title>Raytracer with custom Vector3D class</title>
 </head>
 <body>
 <canvas id="mycanvas"></canvas>
